<resources>

    <string name="app_name">SnacksApp</string>
  	<string name="menu_settings">Settings</string>
    <string name="title_activity_alarm_manager">SnacksTime</string>
    <string name="greeting">Good Evening</string>
	<string name="btCancel">Cancel</string>
	<string name="btStart">Notify</string>
	<string name="btToday">Todays Menu</string>
	<string name="tiffin">Tiffin</string>
	
	<string name="select">Select Your Campus</string>
	<string name="campus1">Campus 1</string>
	<string name="campus2">Campus 2</string>
	
	<string name="app_version">Version 1.0</string>
    
    <string name="website">www.osius.com</string>
    <string name="rights">All rights reserved</string>
</resources>
