<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/top_strip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/selectoption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
        
        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/close_icon" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/relativeLayout2"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectoption"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button1"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campus1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campus2"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center" >

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="20dp"
            android:background="@color/leaf_green"
            android:padding="10dp"
            android:text="@string/btStart"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/start"
            android:background="@color/darkred"
            android:padding="10dp"
            android:text="@string/btCancel"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"
            android:padding="10dp"
            android:text="@string/btToday"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/top_strip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="15dip"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon" />
    </RelativeLayout>

</RelativeLayout>